# Open-CV-Files

./: CMakeLists.txt  MainActivity.java  MyCameraView.java  README.md  activity_main.xml
